support/crown/tests/ui/trace_in_no_trace_composable_works.stderr
error: must_not_have_traceable marked wrapper must not have jsmanaged inside on 1-th position. Consider removing the wrapper.
  --> $DIR/trace_in_no_trace_composable_works.rs:22:12
   |
22 | struct Foo(NoTraceComposable<TraceableStruct, TraceableStruct>);
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[deny(crown::trace_in_no_trace)]` on by default

error: aborting due to previous error

